Fixed neglected tests

--- a/test/makefile
+++ b/test/makefile
@@ -1,7 +1,7 @@
 CC=gcc
 
 IDIR+=. ../Toy/source ../core
-CFLAGS+=$(addprefix -I,$(IDIR)) -g -Wall -W -Wno-unused-parameter -Wno-unused-function -Wno-unused-variable
+CFLAGS+=$(addprefix -I,$(IDIR)) -DSDL_MAIN_HANDLED -g -Wall -W -Wno-unused-parameter -Wno-unused-function -Wno-unused-variable
 LIBS+=-lSDL2 -lSDL2_image -ltoy -lcore
 
 ODIR = obj
