--- a/test/makefile
+++ b/test/makefile
@@ -1,13 +1,13 @@
 CC=gcc
 
-IDIR+=. ../Toy/source ../core
+IDIR+=. ../Toy/source ../box
 CFLAGS+=$(addprefix -I,$(IDIR)) -DSDL_MAIN_HANDLED -g -Wall -W -Wno-unused-parameter -Wno-unused-function -Wno-unused-variable
-LIBS+=-lSDL2 -lSDL2_image -ltoy -lcore
+LIBS+=-lSDL2 -lSDL2_image -ltoy -lbox
 
 ODIR = obj
-TARGETS = $(wildcard ../core/*.c)
+TARGETS = $(wildcard ../box/*.c)
 TESTS = $(wildcard *.c)
-OBJ = $(addprefix $(ODIR)/,$(TARGETS:../core/%.c=%.o)) $(addprefix $(ODIR)/,$(TESTS:.c=.o))
+OBJ = $(addprefix $(ODIR)/,$(TARGETS:../box/%.c=%.o)) $(addprefix $(ODIR)/,$(TESTS:.c=.o))
 
 .PRECIOUS:  $(TESTS:%.c=../$(OUTDIR)/%.exe)
 
@@ -15,11 +15,11 @@ all: $(OBJ) $(TESTS:%.c=../$(OUTDIR)/%.exe)
 
 ../$(OUTDIR)/%.exe: $(ODIR)/%.o
 ifeq ($(shell uname),Linux)
-	@$(CC) -o $@ $< $(TARGETS:../core/%.c=$(ODIR)/%.o) $(CFLAGS) -Wl,-rpath,../out -L../$(LIBDIR) $(LIBS)
+	@$(CC) -o $@ $< $(TARGETS:../box/%.c=$(ODIR)/%.o) $(CFLAGS) -Wl,-rpath,../out -L../$(LIBDIR) $(LIBS)
 	cp ../$(LIBDIR)/*.so ../$(OUTDIR)
 	valgrind --leak-check=full --track-origins=yes $@
 else
-	@$(CC) -o $@ $< $(TARGETS:../core/%.c=$(ODIR)/%.o) $(CFLAGS) -L../$(LIBDIR) $(LIBS)
+	@$(CC) -o $@ $< $(TARGETS:../box/%.c=$(ODIR)/%.o) $(CFLAGS) -L../$(LIBDIR) $(LIBS)
 	cp ../$(LIBDIR)/*.dll ../$(OUTDIR)
 	$@
 endif
@@ -32,7 +32,7 @@ $(ODIR):
 $(ODIR)/%.o: %.c
 	@$(CC) -c -o $@ $< $(CFLAGS)
 
-$(ODIR)/%.o: ../core/%.c
+$(ODIR)/%.o: ../box/%.c
 	@$(CC) -c -o $@ $< $(CFLAGS)
 
 .PHONY: clean
