Added animations to node

--- a/Airport.vcxproj
+++ b/Airport.vcxproj
@@ -23,6 +23,7 @@
   </ItemGroup>
   <ItemGroup>
     <None Include="assets\scripts\entity.toy" />
+    <None Include="assets\scripts\frames.toy" />
     <None Include="assets\scripts\init.toy" />
     <None Include="assets\scripts\scene.toy" />
     <None Include="assets\scripts\tilemap\layer-background.toy" />
