--- a/Airport.vcxproj
+++ b/Airport.vcxproj
@@ -22,15 +22,13 @@
     <ClCompile Include="source\main.c" />
   </ItemGroup>
   <ItemGroup>
-    <None Include="assets\scripts\children_test.toy" />
+    <None Include="assets\scripts\demo\scene.toy" />
+    <None Include="assets\scripts\demo\tilemap\layer-background.toy" />
+    <None Include="assets\scripts\demo\tilemap\layer-walls.toy" />
+    <None Include="assets\scripts\demo\tilemap\tilemap.toy" />
     <None Include="assets\scripts\empty.toy" />
-    <None Include="assets\scripts\entity.toy" />
-    <None Include="assets\scripts\frames_test.toy" />
+    <None Include="assets\scripts\airplane.toy" />
     <None Include="assets\scripts\init.toy" />
-    <None Include="assets\scripts\scene.toy" />
-    <None Include="assets\scripts\tilemap\layer-background.toy" />
-    <None Include="assets\scripts\tilemap\layer-walls.toy" />
-    <None Include="assets\scripts\tilemap\tilemap.toy" />
   </ItemGroup>
   <PropertyGroup Label="Globals">
     <VCProjectVersion>17.0</VCProjectVersion>
