Renamed Box_EngineNode to Box_Node

--- a/Box.vcxproj
+++ b/Box.vcxproj
@@ -139,7 +139,7 @@ xcopy "$(SolutionDir)Toy\repl\repl_tools.*" "$(SolutionDir)box" /Y /I /E</Comman
   <ItemGroup>
     <ClCompile Include="box\box_common.c" />
     <ClCompile Include="box\box_engine.c" />
-    <ClCompile Include="box\box_engine_node.c" />
+    <ClCompile Include="box\box_node.c" />
     <ClCompile Include="box\dbg_profiler.c" />
     <ClCompile Include="box\lib_about.c" />
     <ClCompile Include="box\lib_engine.c" />
@@ -153,7 +153,7 @@ xcopy "$(SolutionDir)Toy\repl\repl_tools.*" "$(SolutionDir)box" /Y /I /E</Comman
   <ItemGroup>
     <ClInclude Include="box\box_common.h" />
     <ClInclude Include="box\box_engine.h" />
-    <ClInclude Include="box\box_engine_node.h" />
+    <ClInclude Include="box\box_node.h" />
     <ClInclude Include="box\dbg_profiler.h" />
     <ClInclude Include="box\lib_about.h" />
     <ClInclude Include="box\lib_engine.h" />
