--- a/source/makefile
+++ b/source/makefile
@@ -1,8 +1,8 @@
 CC=gcc
 
-IDIR+=. ../Toy/source ../box
+IDIR+=. ../Box/Toy/source ../Box/source
 CFLAGS+=$(addprefix -I,$(IDIR)) -g -Wall -W -Wno-unused-parameter -Wno-unused-function -Wno-unused-variable
-LIBS+=-lSDL2 -ltoy -lbox
+LIBS+=-lSDL2 -ltoy -lbox -lSDL2_image -lSDL2_ttf -lSDL2main -lSDL2
 
 ODIR = obj
 SRC = $(wildcard *.c)
@@ -11,7 +11,7 @@ OBJ = $(addprefix $(ODIR)/,$(SRC:.c=.o))
 OUT=../$(OUTDIR)/airport
 
 all: $(OBJ)
-	$(CC) $(CFLAGS) -o $(OUT) $(OBJ) -Wl,-rpath,. -L../$(LIBDIR) $(LIBS)
+	$(CC) $(CFLAGS) -o $(OUT) $(OBJ) -Wl,-rpath,. -L../$(OUTDIR) $(LIBS)
 
 $(OBJ): | $(ODIR)
 
