Began working on sounds

--- a/source/makefile
+++ b/source/makefile
@@ -2,7 +2,7 @@ CC=gcc
 
 IDIR+=. ../Box/Toy/source ../Box/source
 CFLAGS+=$(addprefix -I,$(IDIR)) -g -Wall -W -Wno-unused-parameter -Wno-unused-function -Wno-unused-variable
-LIBS+=-lSDL2 -ltoy -lbox -lSDL2_image -lSDL2_ttf -lSDL2main -lSDL2
+LIBS+=-ltoy -lbox -lSDL2_image -lSDL2_mixer -lSDL2_ttf -lSDL2main -lSDL2
 
 ODIR = obj
 SRC = $(wildcard *.c)
